# test-v2

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  HANDOFF.md  MIGRATION.md  README.md  SETUP-GUIDE.md  dashboard_design_prompt.md  docker-compose.yml  fly.toml  generate.py  infrastructure_prompt.md  news-dashboard-v2.html  news_database.json  process_news.py  process_news_agent.py  production_ai_intelligence_platform_prompt.md  render.yaml  requirements.txt  restructure backend.md  usage_guide.md  vercel.json
apps/api/: .env.example  Dockerfile  Procfile  alembic.ini  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_supabase_realtime_storage.py
apps/api/app/: main.py
apps/api/app/api/v1/: entities.py  feedback.py  graph.py  industries.py  news.py  reports.py  router.py  search.py  vault.py  ws.py
apps/api/app/core/: config.py  deps.py  logging.py  security.py
apps/api/app/db/: base.py  models.py  session.py
apps/api/app/events/: bus.py
apps/api/app/schemas/: news.py  report.py  search.py
apps/api/app/scripts/: seed.py
apps/api/app/services/: entities.py  graph.py  industries.py  ingest.py  news.py  realtime.py  reports.py  search.py  storage.py  vault.py
intelligence-platform/apps/api/: Dockerfile  alembic.ini  pyproject.toml
intelligence-platform/apps/api/alembic/: env.py
intelligence-platform/apps/api/app/: main.py
intelligence-platform/apps/api/app/api/v1/: __init__.py
intelligence-platform/apps/api/app/api/v1/routes/: dashboard.py  (+6 more)
intelligence-platform/apps/api/app/core/: config.py  db.py  logging.py  security.py
intelligence-platform/apps/api/app/models/: base.py  news.py  wiki.py
intelligence-platform/apps/api/app/schemas/: news.py
intelligence-platform/apps/api/app/services/: embeddings.py  events.py  search.py
intelligence-platform/apps/api/app/ws/: manager.py  routes.py
intelligence-platform/services/agents/: Dockerfile  pyproject.toml
intelligence-platform/services/agents/agents/: config.py  db.py  graph.py  report.py  server.py
intelligence-platform/services/agents/agents/nodes/: __init__.py  classification.py  dashboard_sync.py  ingestion.py  pdf_generation.py  report_generation.py  summarization.py  wiki_enrichment.py
intelligence-platform/services/agents/agents/prompts/: registry.py
intelligence-platform/services/agents/agents/prompts/classification/: v1.md
intelligence-platform/services/agents/agents/prompts/report_generation/: v1.md
intelligence-platform/services/agents/agents/prompts/summarization/: v1.md
intelligence-platform/services/agents/agents/prompts/wiki_enrichment/: v1.md
intelligence-platform/services/agents/agents/tools/: wiki_writer.py
intelligence-platform/services/agents/agents/utils/: lang.py
intelligence-platform/services/workers/: Dockerfile  pyproject.toml
intelligence-platform/services/workers/workers/: app.py  tasks_ingest.py  tasks_sync.py
(+3813 files in other folders)
