[project]
name = "atlas-api"
version = "0.1.0"
description = "Atlas Intelligence Platform — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "sqlalchemy==2.0.32",
  "alembic==1.13.2",
  "asyncpg==0.29.0",
  "psycopg[binary]==3.2.1",
  "pgvector==0.3.2",
  "redis==5.0.8",
  "meilisearch==0.31.5",
  "anthropic==0.34.0",
  "openai==1.40.0",
  "tenacity==9.0.0",
  "structlog==24.4.0",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.9",
  "httpx==0.27.0",
  "boto3==1.34.162",
  "minio==7.2.7",
  "celery==5.4.0",
  "langgraph==0.2.14",
  "watchdog==4.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-asyncio==0.23.8",
  "ruff==0.6.2",
  "mypy==1.11.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90"]
