[project]
name = "intelligence-api"
version = "0.1.0"
description = "FastAPI public API for the Intelligence Platform"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "pgvector>=0.3.4",
  "httpx>=0.27.0",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "python-jose[cryptography]>=3.3.0",
  "structlog>=24.4.0",
  "websockets>=13.0",
  "sentry-sdk[fastapi]>=2.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.5",
  "mypy>=1.11.0",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
