[project]
name = "intelligence-agents"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "langgraph>=0.2.34",
  "langchain-anthropic>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-core>=0.3.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "pgvector>=0.3.4",
  "redis>=5.0.8",
  "httpx>=0.27.0",
  "structlog>=24.4.0",
  "tiktoken>=0.7.0",
  "python-frontmatter>=1.1.0",
]
