[project]
name = "intelligence-workers"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "celery>=5.4.0",
  "redis>=5.0.8",
  "httpx>=0.27.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "structlog>=24.4.0",
  "pydantic-settings>=2.4.0",
]
